--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,12 +7,15 @@ api-version: 1.18
 
 commands:
   mobstats:
-    description: Shows a breakdown of the mobs you've killed.
-    usage: /mobstats
+    description: Shows a breakdown of the mobs you killed, or another player if you are an Admin.
+    usage: /mobstats [player]
   mobclear:
-    description: Clear all mobs from yourself, all or a specific mob.
-    usage: /mobclear [all/type] [mobtype]
+    description: Clear all mobs from yourself or another player.
+    usage: /mobclear [player]
   mobleaderboard:
-    description: Show the Top 5 Mob Hunters of overall or a specific mob.
-    usage: /mobleaderboard [all/type]
+    description: Show the Top 5 Mob Hunters overall or of a specific mob.
+    usage: /mobleaderboard [mob]
     aliases: [lb, leaderboard]
+  mobhelp:
+    description: Helps the player know how to play MobHunt.
+    usage: /mobhelp
