--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
-main: com.modularenigma.MobHunt.MobHuntMain
+main: org.modularsoft.MobHunt.MobHuntMain
 name: MobHunt
 description: Hunt as many mobs overall, or of a unique mob type.
 version: ${project.version}
-authors: [ModularEnigma]
-api-version: 1.18
+authors: [ModularSoft]
+api-version: 1.20
 
 commands:
   mobstats:
