--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -114,7 +114,7 @@ Lang:
       Title: "&e%Player%'s&r stats"
       Format: "%MobType% &7- %Kills%"
     Help:
-      - "Killing Mobs rewards &5points&r, but sebsequent kills of the same Mob
+      - "Killing Mobs rewards &5points&r, but subsequent kills of the same Mob
         will yield less points until a threshold is met. Once the threshold is
         met, no more points are awarded for that Mob."
       - "The best hunters will both, &ekill in quantity&r, and journey far and
